enhancing folder structure and templating

--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,6 @@
-theme: minima
+title: the Design Cooperative
+description: "Write an awesome description for your new site here. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
+
+markdown: kramdown
 permalink: pretty
+theme: minima
