changed words and more words and such

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: the Design Cooperative
-description: "Write an awesome description for your new site here. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
+description: "Our web site."
 
 markdown: kramdown
 permalink: pretty
